- add scheduled_at row into task - add recur daily type settings (not realization)
