# internal/transport/http/handlers/dto.go
@@ -7,9 +7,12 @@ import (
 )
 
 type taskMutationDTO struct {
-	Title       string            `json:"title"`
-	Description string            `json:"description"`
-	Status      taskdomain.Status `json:"status"`
+	Title        string                  `json:"title"`
+	Description  string                  `json:"description"`
+	Status       taskdomain.Status       `json:"status"`
+	ScheduledAt  time.Time               `json:"scheduled_at"`
+	RecurType    taskdomain.RecurType    `json:"recure_type,omitempty"`
+	IntervalDays taskdomain.IntervalDays `json:"interval_days,omitempty"`
 }
 
 type taskDTO struct {
@@ -17,6 +20,7 @@ type taskDTO struct {
 	Title       string            `json:"title"`
 	Description string            `json:"description"`
 	Status      taskdomain.Status `json:"status"`
+	ScheduledAt time.Time         `json:"scheduled_at"`
 	CreatedAt   time.Time         `json:"created_at"`
 	UpdatedAt   time.Time         `json:"updated_at"`
 }
@@ -27,7 +31,8 @@ func newTaskDTO(task *taskdomain.Task) taskDTO {
 		Title:       task.Title,
 		Description: task.Description,
 		Status:      task.Status,
-		CreatedAt:   task.CreatedAt,
-		UpdatedAt:   task.UpdatedAt,
+		ScheduledAt: task.ScheduledAt.UTC(),
+		CreatedAt:   task.CreatedAt.UTC(),
+		UpdatedAt:   task.UpdatedAt.UTC(),
 	}
 }
